M3 accept ADR-0031 after 103-test gate